--- a/FUNCIONÁRIO(ADM)/notificacoes/index.html
+++ b/FUNCIONÁRIO(ADM)/notificacoes/index.html
@@ -25,38 +25,23 @@
                 <li><a href="/FUNCIONÁRIO(ADM)/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
-                <li><a href="/FUNCIONÁRIO(ADM)/reservas/" class="active"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
-                <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/" class="active"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-                <li><a href="/FUNCIONÁRIO(ADM)/informacoes/"><span class="material-symbols-outlined">info</span>Informações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
             </ul>
         </nav>
     </div>
 
-    <h1 class="selecao">Informações do livro</h1>
+    <h1 class="selecao">Notificações</h1>
 
     <div class="container">
         <div class="lineSquare">
-            <div class="input-container">
-                <div class="info-book-reserva">
-                    <img src="/Capa_dos_livros/o diário de anne frank.jpg" alt="O Diário de Anne Frank" class="img-reserva">
-                    <div class="livro-info">
-                        <p>O Diário de Anne Frank</p>
-                        <p>Por: Anne Frank</p>
-                    </div>
-                </div>
-                <div class="line"></div>
-                <p class="info">Reservado por: Clara Oliveira da Silva</p>
-                <p class="info">Reserva realizada no dia: 12/03/2024</p>
-                <p class="info">Período da reserva: 12/03/2024 até 27/03/2024</p>
-                <div class="line"></div>
-                <p class="p-usuario"> Confirmar retirada do livro</p>
-                <div class="opcao">
-                    <button type="submit" class="confirm-button">Retirada confirmada</button>
-                    <button type="submit" class="cancel-button">Cancelar retirada</button>
-                </div>
-                <p class="obs">OBS: se após 3 dias da data inicial da reserva não for declarada nenhuma informação a respeito da retirada, a reserva será automaticamente cancelada.</p>
+           <p class="horario">há 10 minutos</p>
+           <div class="notify">
+                <img src="/imagens_telas/warning.png" alt="Imagem Aviso" class="aviso">
+                <p class="mensagem">Caro aluno, daqui 3 dias o livro reservado deverá ser devolvido.</p>
             </div>
         </div>
     </div>
