--- a/FUNCIONÁRIO(ADM)/perfil/index.html
+++ b/FUNCIONÁRIO(ADM)/perfil/index.html
@@ -28,7 +28,7 @@
             <li><a href="/FUNCIONÁRIO(ADM)/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
             <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
             <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/informacoes/"><span class="material-symbols-outlined">info</span>Informações</a></li>
+            <li><a href="/FUNCIONÁRIO(ADM)/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a></li>
             <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
         </ul>
     </nav>
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="redefinir">
-        <a href="/FUNCIONÁRIO(ADM)/login/">Esqueceu a senha?</a>
+        <a href="/FUNCIONÁRIO(ADM)/esqueceuSenha1/">Esqueceu a senha?</a>
     </div>
     <div class="editar">
         <a href="/FUNCIONÁRIO(ADM)/perfilEditar/"><button type="submit" class="cadastro-button"><img src="/imagens_telas/editar_perfil.png"></button></a>
