--- a/FUNCIONÁRIO(ADM)/reservas/index.html
+++ b/FUNCIONÁRIO(ADM)/reservas/index.html
@@ -28,7 +28,7 @@
                 <li><a href="/FUNCIONÁRIO(ADM)/reservas/" class="active"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-                <li><a href="/FUNCIONÁRIO(ADM)/informacoes/"><span class="material-symbols-outlined">info</span>Informações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
             </ul>
         </nav>
@@ -46,6 +46,17 @@
                         <p>Por: Anne Frank</p>
                     </div>
                 </div>
+                <div class="line"></div>
+                <p class="info">Reservado por: Clara Oliveira da Silva</p>
+                <p class="info">Reserva realizada no dia: 12/03/2024</p>
+                <p class="info">Período da reserva: 12/03/2024 até 27/03/2024</p>
+                <div class="line"></div>
+                <p class="p-usuario"> Confirmar retirada do livro</p>
+                <div class="opcao">
+                    <button type="submit" class="confirm-button">Retirada confirmada</button>
+                    <button type="submit" class="cancel-button">Cancelar retirada</button>
+                </div>
+                <p class="obs">OBS: se após 3 dias da data inicial da reserva não for declarada nenhuma informação a respeito da retirada, a reserva será automaticamente cancelada.</p>
             </div>
         </div>
     </div>
