--- a/FUNCIONÁRIO(ADM)/signUp/index.html
+++ b/FUNCIONÁRIO(ADM)/signUp/index.html
@@ -45,7 +45,7 @@
                 <div class="logar">
                     Já tem uma conta? <a href="/FUNCIONÁRIO(ADM)/login/">Faça login</a>
                 </div>
-                <button type="submit" class="cadastro-button">Fazer cadastro</button>
+                <a href="/FUNCIONÁRIO(ADM)/login/"><button type="submit" class="cadastro-button">Fazer cadastro</button></a>
             </div>
         </div>
     </div>
