--- a/FUNCIONÁRIO(ADM)/infoContato/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContato/index.html
@@ -27,31 +27,25 @@
                 <li><a href="/FUNCIONÁRIO(ADM)/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
-                <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"  class="active"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-                <li><a href="/FUNCIONÁRIO(ADM)/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/infoContato/"  class="active"><span class="material-symbols-outlined">info</span>Informações</a></li>
                 <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
             </ul>
         </nav>
     </div>
 
-    <h1 class="selecao">Empréstimos</h1>
+    <h1 class="selecao">Informações de Contato</h1>
 
     <div class="container">
-        <div class="lineSquare">
-            <div class="input-container">
-                <div class="info-book-reserva">
-                    <img src="/Capa_dos_livros/o diário de anne frank.jpg" alt="O Diário de Anne Frank" class="img-reserva">
-                    <div class="livro-info">
-                        <p>O Diário de Anne Frank</p>
-                        <p>Por: Anne Frank</p>
-                    </div>
-                </div>
-                <div class="line"></div>
-                <p class="info">Reservado por: Clara Oliveira da Silva</p>
-                <p class="info">Reserva realizada no dia: 12/03/2024</p>
-                <p class="info">Período da reserva: 12/03/2024 até 27/03/2024</p>
-            </div>
-        </div>
+        <img src="/imagens_telas/contato.jpg" alt="Imagem tela contatos" class="img-contato">
+        <p class="escola">ETEC PROF. MASSUYUKI KAWANO</p>
+        <text class="infos">(14) 3496 1520 - (14) 3491 5393 <br>
+                RUA: BEZERRA DE MENEZES, 215 <br>
+                CEP 17605-440 <br>
+                E136DIR@CPS.SP.GOV.BR</text>
+    </div>
+    <div class="editar">
+        <a href="/FUNCIONÁRIO(ADM)/infoContatoEditar/"><button type="submit" class="cadastro-button"><img src="/imagens_telas/editar_perfil.png"></button></a>
     </div>
 </body>
 </html>
