--- a/FUNCIONÁRIO(ADM)/biblioteca/index.html
+++ b/FUNCIONÁRIO(ADM)/biblioteca/index.html
@@ -34,7 +34,8 @@
         </nav>
     </div>
 
-    <h1 class="selecao">Biblioteca</h1>
+        <h1 class="biblioteca">Biblioteca</h1>
+        <button class="add-button">+ Adicionar</button>
     <div class="search-container">
         <input type="text" placeholder="Procurar" id="search-input">
         <button type="button"><span class="material-symbols-outlined">search</span></button>
@@ -69,13 +70,13 @@
             </div>
     
         <div class="book-list">
-            <div class="book-item" data-genre="drama">
+            <a href="/FUNCIONÁRIO(ADM)/login/" class="book-item">
                 <img src="/Capa_dos_livros/o diário de anne frank.jpg" alt="O diário de Anne Frank" class="book-image">
                 <div class="book-info">
                     <h2 class="book-title">O diário de Anne Frank</h2>
                     <p class="book-author">Anne Frank</p>
                 </div>
-            </div>
+            </a>
             <div class="book-item"> 
                 <img src="/Capa_dos_livros/dom casmurro.jpg" alt="Dom Casmurro" class="book-image">
                 <div class="book-info">
@@ -177,5 +178,10 @@
             </div> 
         </div>
     </div>
+    <footer>
+        <div>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+        </div>
+    </footer>
 </body>
 </html>
