--- a/FUNCIONÁRIO(ADM)/infoContato/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContato/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
 
-    <h1 class="selecao">Informações de Contato</h1>
+    <h1 class="contato">Informações de Contato</h1>
 
     <div class="container">
         <img src="/imagens_telas/contato.jpg" alt="Imagem tela contatos" class="img-contato">
