--- a/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
@@ -34,19 +34,19 @@
         </nav>
     </div>
 
-    <h1 class="selecao">Informações de Contato</h1>
+    <h1 class="contato">Informações de Contato</h1>
 
     <div class="container">
         <img src="/imagens_telas/contato.jpg" alt="Imagem tela contatos" class="img-contato">
             <div class="input-container">
             <div class="input-group">   
                 <form>
-                    <input type="text" id="nome" placeholder="Nome da escola" name="nome" value="ETEC PROF. MASSUYUKI KAWANO" class="input-field">
+                    <input type="text" id="nome" placeholder="Nome da escola" name="nome" value="ETEC PROF. MASSUYUKI KAWANO" class="input-field nome-input">
                     <br><br>
-                    <input type="text" id="infos" name="infos" value="(14) 3496 1520 - (14) 3491 5393
-                    RUA: BEZERRA DE MENEZES, 215
-                    CEP 17605-440
-                    E136DIR@CPS.SP.GOV.BR" class="input-field">
+                    <textarea id="infos" name="infos" class="input-field infos-input">(14) 3496 1520 - (14) 3491 5393
+RUA: BEZERRA DE MENEZES, 215
+CEP 17605-440
+E136DIR@CPS.SP.GOV.BR</textarea>
                 </form>
             </div> 
         </div> 
