--- a/FUNCIONÁRIO(ADM)/recomendacao/index.html
+++ b/FUNCIONÁRIO(ADM)/recomendacao/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
 
-    <h1 class="selecao">Recomendações dos professores</h1>
+    <h1 class="recomendacao">Recomendações dos professores</h1>
     <div class="search-container">
         <input type="text" placeholder="Procurar" id="search-input">
         <button type="button"><span class="material-symbols-outlined">search</span></button>
