--- a/FUNCIONÁRIO(ADM)/emprestimos/index.html
+++ b/FUNCIONÁRIO(ADM)/emprestimos/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
 
-    <h1 class="selecao">Empréstimos</h1>
+    <h1 class="emprestimo">Empréstimos</h1>
 
     <div class="container">
         <div class="lineSquare">
