--- a/FUNCIONÁRIO(ADM)/notificacoes/index.html
+++ b/FUNCIONÁRIO(ADM)/notificacoes/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
 
-    <h1 class="selecao">Notificações</h1>
+    <h1 class="notificacao">Notificações</h1>
 
     <div class="container">
         <div class="lineSquare">
