--- a/FUNCIONÁRIO(ADM)/reservas/index.html
+++ b/FUNCIONÁRIO(ADM)/reservas/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
 
-    <h1 class="selecao">Informações do livro</h1>
+    <h1 class="informacoes">Informações do livro</h1>
 
     <div class="container">
         <div class="lineSquare">
