--- a/FUNCIONÁRIO(ADM)/recomendacao/index.html
+++ b/FUNCIONÁRIO(ADM)/recomendacao/index.html
@@ -39,6 +39,43 @@
         <input type="text" placeholder="Procurar" id="search-input">
         <button type="button"><span class="material-symbols-outlined">search</span></button>
     </div>
+
+    <div class="genre-buttons">
+        <div class="book-genre">
+            <img src=""  class="icon">
+            <p class="text-icon">Todos</p>
+        </div>  
+        <div class="book-genre">
+            <img src="/Icons TCC/Policial e Suspense.png" class="icon">
+            <p class="text-icon">Policial e Suspense</p>
+        </div>
+        <div class="book-genre">
+            <img src="/Icons TCC/Terror.png" class="icon">
+            <p class="text-icon">Terror</p>
+        </div>
+        <div class="book-genre">
+            <img src="/Icons TCC/Ação e Aventura.png" class="icon">
+            <p class="text-icon">Ação e Aventura</p>
+        </div>
+        <div class="book-genre">
+            <img src="/Icons TCC/Autobiografia.png" class="icon">
+            <p class="text-icon">Autobiografia</p>
+        </div>
+        <div class="book-genre">
+            <img src="/Icons TCC/Fantasia.png" class="icon">
+            <p class="text-icon">Fantasia</p>
+        </div>
+        <div class="book-genre">
+            <img src="/Icons TCC/Ficção Científica.png" class="icon">
+            <p class="text-icon">Ficção Científica</p>
+        </div>
+        <div class="book-genre">
+            <img src="/Icons TCC/Romance.png" class="icon">
+            <p class="text-icon">Romance</p>
+        </div>
+    </div>
+
+    <main>
     <div class="container">
         <div class="book-list">
             <div class="book-item">
@@ -92,5 +129,11 @@
             </div> 
         </div>
     </div>
+</main>
+    <footer>
+        <div>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+        </div>
+    </footer>
 </body>
 </html>
