--- a/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
@@ -34,6 +34,7 @@
         </nav>
     </div>
 
+<main>
     <h1 class="contato">Informações de Contato</h1>
 
     <div class="container">
@@ -54,5 +55,11 @@ E136DIR@CPS.SP.GOV.BR</textarea>
     <div class="editar">
         <a href="/FUNCIONÁRIO(ADM)/infoContato/"><button type="submit" class="save-button">Salvar</button></a>
     </div>
+</main>
+    <footer>
+        <div>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+        </div>
+    </footer>
 </body>
 </html>
