--- a/FUNCIONÁRIO(ADM)/perfil/index.html
+++ b/FUNCIONÁRIO(ADM)/perfil/index.html
@@ -33,9 +33,9 @@
         </ul>
     </nav>
     </div>
-
+<div class="content-wrapper">
+<main>
     <h1 class="perfil">Perfil</h1>
-
     <div class="parent-container">
         <div class="p-i-container">
             <div class="profile-container">
@@ -84,5 +84,12 @@
     <div class="editar">
         <a href="/FUNCIONÁRIO(ADM)/perfilEditar/"><button type="submit" class="cadastro-button"><img src="/imagens_telas/editar_perfil.png"></button></a>
     </div>
+</main>
+</div>
+    <footer>
+        <div>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+        </div>
+    </footer>
 </body>
 </html>
