--- a/FUNCIONÁRIO(ADM)/recomendacao/index.html
+++ b/FUNCIONÁRIO(ADM)/recomendacao/index.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
     </div>
-
+    <main>
     <h1 class="recomendacao">Recomendações dos professores</h1>
     <div class="search-container">
         <input type="text" placeholder="Procurar" id="search-input">
@@ -75,17 +75,17 @@
         </div>
     </div>
 
-    <main>
+    
     <div class="container">
         <div class="book-list">
-            <div class="book-item">
+            <a href="/FUNCIONÁRIO(ADM)/infoLivroRecomendacao/" class="book-item">
                 <p class="book-course">Téc. Recursos Humanos</p>
                 <img src="/Capa_dos_livros/o diário de anne frank.jpg" alt="O diário de Anne Frank" class="book-image">
                 <div class="book-info">
                     <h2 class="book-title">O diário de Anne Frank</h2>
                     <p class="book-author">Anne Frank</p>
                 </div>
-            </div>
+            </a>
             <div class="book-item">
                 <p class="book-course">Téc. Contabilidade</p>
                 <img src="/Capa_dos_livros/dom casmurro.jpg" alt="Dom Casmurro" class="book-image">
