--- a/FUNCIONÁRIO(ADM)/reservas/index.html
+++ b/FUNCIONÁRIO(ADM)/reservas/index.html
@@ -34,6 +34,7 @@
         </nav>
     </div>
 
+<main>
     <h1 class="informacoes">Informações do livro</h1>
 
     <div class="container">
@@ -60,5 +61,11 @@
             </div>
         </div>
     </div>
+</main>
+    <footer>
+        <div>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+        </div>
+    </footer>
 </body>
 </html>
