--- a/FUNCIONÁRIO(ADM)/perfilEditar/index.html
+++ b/FUNCIONÁRIO(ADM)/perfilEditar/index.html
@@ -34,6 +34,7 @@
     </nav>
     </div>
 
+<main>
     <h1 class="perfil">Perfil</h1>
 
     <div class="parent-container">
@@ -93,5 +94,11 @@
     <div class="editar">
         <a href="/FUNCIONÁRIO(ADM)/perfil/"><button type="submit" class="save-button">Salvar</button></a>
     </div>
+</main>
+    <footer>
+        <div>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+        </div>
+    </footer>
 </body>
 </html>
