--- a/FUNCIONÁRIO(ADM)/addLivroNovo/index.html
+++ b/FUNCIONÁRIO(ADM)/addLivroNovo/index.html
@@ -35,36 +35,49 @@
     </div>
 
 <main>
-    <h1 class="add-livro-existente">Adicionar livro novo</h1>
+    <h1 class="add-livro-novo">Adicionar livro novo</h1>
 
     <div class="container">
-        <div>
-            <p class="p-usuario"> Selecione o livro:</p>
-            <div class="opcao">
-                <select id="options" class="select-input">
-                    <option value="" disabled selected>Selecione uma opção</option>
-                    <option value="OdiáriodeAnneFrank(AnneFrank)">O diário de Anne Frank - Anne Frank</option>
-                    <option value="DomCasmurro(MachadodeAssis)">Dom Casmurro - Machado de Assis</option>
-                    <option value="RomeueJulieta(WilliamShakespeare)">Romeu e Julieta - William Shakespeare</option>
-                    <option value="1984(GeorgeOrwell)">1984 - George Orwell</option>
-                    <option value="OsMiseráveis(VictorHugo)">Os Miseráveis - Victor Hugo</option>
-                    <option value="OrgulhoePreconceito(JaneAusten)">Orgulho e Preconceito - Jane Austen</option>
-                    <option value="Verity(CollenHoover)">Verity - Collen Hoover</option>
-                    <option value="Heartstopper(AliceOseman)">Heartstopper - Alice Oseman</option>
-                    <option value="Deixadaparatrás(CharlieDonlea)">Deixada para trás - Charlie Donlea</option>
-                    <option value="Arevoluçãodosbichos(GeorgeOrwell)">A revolução dos bichos - George Orwell</option>
-                    <option value="Procurenascinzas(CharlieDonlea)">Procure nas cinzas - Charlie Donlea</option>
-                    <option value="HarryPottereaPedraFilosofal(J.K.Rowling)">Harry Potter e a Pedra Filosofal - J.K. Rowling</option>
-                    <option value="Ossetemaridosdeevelynhugo(TaylorJekinsReid)">Os Sete Maridos de Evelyn Hugo - Taylor Jekins Reid</option>
-                    <option value="Agarotadolago(CharlieDonlea)">A Garota do Lago - Charlie Donlea</option>
-                    <option value="Dracula(BramStoker)">Drácula - Bram Stoker</option>
-                </select>
+        <div class="input-total">
+            <div class="input-img-container">
+                <div class="img-book">
+                    <p class="text-input">Capa:</p>
+                    <label for="file-upload" class="upload-button">Escolher Imagem</label>
+                    <input id="file-upload" type="file" accept="image/*" class="input-wrapper">
+                </div>
+                <div class="input-group">
+                    <text class="text-input">Quantidade:</text>
+                    <input type="number" class="input-quant">
+                </div>
+            </div>
+            <div class="input-container">
+                <div class="input-group">
+                    <p class="text-input">Nome:</p>
+                    <input type="text" class="input-field">
+                </div>
+                <div class="input-group">
+                    <p class="text-input">Autor:</p>
+                    <input type="text" class="input-field">
+                </div>
+                <div class="input-group">
+                    <p class="text-input">Editora:</p>
+                    <input type="text" class="input-field">
+                </div>
+                <div class="input-group">
+                    <text class="text-input">Gênero:</text>
+                    <input type="text" class="input-field">
+                </div>
+                <div class="input-group">
+                    <text class="text-input">Resumo:</text>
+                    <textarea id="resumo" name="resumo" class="input-resumo" ></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="editar">
+            <a href="/FUNCIONÁRIO(ADM)/biblioteca/"><button class="add-button">Adicionar</button></a>
         </div>
     </div>
 </main>
-    <div class="editar">
-        <a href="/FUNCIONÁRIO(ADM)/biblioteca/"><button class="add-button">Adicionar</button></a>
-    </div>
     <footer>
         <div>
             Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
