--- a/FUNCIONÁRIO(ADM)/recomendacao/index.html
+++ b/FUNCIONÁRIO(ADM)/recomendacao/index.html
@@ -42,7 +42,7 @@
 
     <div class="genre-buttons">
         <div class="book-genre">
-            <img src=""  class="icon">
+            <img src="/Icons TCC/todos.png"  class="icon">
             <p class="text-icon">Todos</p>
         </div>  
         <div class="book-genre">
