--- a/FUNCIONÁRIO(ADM)/telaInicial/index.html
+++ b/FUNCIONÁRIO(ADM)/telaInicial/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
 </head>
 <body>
-    <div class="container">
+    <div class="header">
         <div class="retangGreen">
             <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
             <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
@@ -32,6 +32,7 @@
                 <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
             </ul>
         </nav>
+    <main>
         <div class="search-container">
             <input type="text" placeholder="Procurar" id="search-input">
             <button type="button"><span class="material-symbols-outlined">search</span></button>
@@ -98,7 +99,7 @@
             <img src="/imagens_telas/frase.png" class="imgFrase">
         </div>
     </div>
-
+</main>
     <footer>
         <div>
             Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
